[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=0.3.1",
    "langchain>=0.3.23",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pdfminer>=20191125",
    "pdfminer-six>=20250327",
    "streamlit>=1.44.1",
]
